# blockcraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blockcraft.cpp  blockcraft_server.cpp  build.sh  main.cpp
data/shaders/: depth.frag  depth.geom  depth.vert  hud.vert  plain.frag  plain.vert  voxel.frag  voxel.vert
include/: CMakeLists.txt  test.hpp
include/app/: client.hpp
include/blocks/: CMakeLists.txt  chunk.hpp  chunk_gpu_handler.hpp  chunk_manager.hpp  common.hpp
include/ecs/: CMakeLists.txt  archetype.hpp  common.hpp  component.hpp  ecs.hpp  entity.hpp  system.hpp
include/events/: CMakeLists.txt  common.hpp  event.hpp  event_manager.hpp
include/foo/: foo.hpp
include/graphics/: CMakeLists.txt  camera.hpp  common.hpp  shader.hpp  shadow_map.hpp  texture.hpp  texture_manager.hpp  window.hpp
include/networking/: CMakeLists.txt  client.hpp  packet.hpp  server.hpp  session.hpp
include/systems/: CMakeLists.txt  action.hpp  camera.hpp  common.hpp  datatypes.hpp  movement.hpp  physics.hpp
include/utils/: CMakeLists.txt  assert.hpp  logger.hpp
src/: CMakeLists.txt  test.cpp
src/app/: CMakeLists.txt  client.cpp
src/blocks/: CMakeLists.txt  chunk.cpp  chunk_gpu_handler.cpp  chunk_manager.cpp
src/ecs/: CMakeLists.txt  archetype.cpp  ecs.cpp  entity.cpp  system.cpp
src/events/: CMakeLists.txt  event.cpp  event_manager.cpp
src/foo/: CMakeLists.txt  foo.cpp
src/graphics/: CMakeLists.txt  shader.cpp  shadow_map.cpp  texture.cpp  texture_manager.cpp  window.cpp
src/networking/: CMakeLists.txt  client.cpp  packet.cpp  server.cpp  session.cpp
